Fixed css problem on mobile

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -52,7 +52,6 @@
 
 .card-closed {
   border: 4px solid white;
-  border-radius: 8px;
   background-color: #458ca9;
 }
 
